--- a/main.css
+++ b/main.css
@@ -2,4 +2,11 @@ img {
     display: inline-block;
     height: 40%;
     width: 40%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.header {
+  text-align: center;
 }
