--- a/main.css
+++ b/main.css
@@ -1,12 +1,16 @@
+body {
+  position: relative;
+}
+
 img {
-    display: inline-block;
-    height: 40%;
-    width: 40%;
     display: block;
+    height: auto;
+    max-width: 100%;
     margin-left: auto;
     margin-right: auto;
 }
 
 .header {
   text-align: center;
+  font-family: Domine;
 }
