--- a/main.css
+++ b/main.css
@@ -11,7 +11,7 @@ img {
 }
 
 .content {
-  
+
 }
 
 .header {
@@ -19,7 +19,7 @@ img {
   width: 100%;
   text-align: center;
   font-family: Domine;
-  position: fixed;
+  /*position: fixed;*/
 }
 
 h4 {
