make content div's position fixed the first in the list of features

--- a/main.css
+++ b/main.css
@@ -3,7 +3,7 @@ body {
 }
 
 .content {
-  margin: 50px;
+  margin-top: : 50px;
 }
 
 img {
@@ -23,10 +23,10 @@ img {
 }*/
 
 h2 {
+  position: fixed;
   height: 50px;
   width: 100%;
   font-family: Domine;
-  position: fixed;
   text-align: center;
 }
 
