--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,20 +1,22 @@
-body {
-  position: relative;
+#content {
+  position: absolute;
 }
 
-h1 {
-  float: left;
-  font-family: Domine;
+.Sidebar {
+  position: absolute;
+  background-color: pink;
+  height: 100%;
+  width: 20%;
 }
 
 img {
     display: block;
     height: auto;
-    max-width: 100%;
-    margin-left: auto;
-    margin-right: auto;
+    max-width: 670px;
+    float: right;
+    /*margin-left: auto;
+    margin-right: auto;*/
 }
-
 
 li {
   list-style: none;
