--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,21 +1,26 @@
 body {
+  display: flex;
+  justify-content: center;
   margin: 0;
 }
 
 #content {
-  /*height: 100%;*/
-  position: absolute;
+  position: relative;
 }
 
 .Sidebar {
   text-align: center;
-  position: absolute;
+  position: fixed;
   background-color: pink;
   height: 100%;
   width: 20%;
   flex-direction: column;
 }
 
+.img-list-container {
+  width: 80%;
+  float: right;
+}
 
 li {
   float: right;
