--- a/public/css/main.css
+++ b/public/css/main.css
@@ -20,12 +20,13 @@ body {
 .img-list-container {
   width: 80%;
   float: right;
+  text-align: center;
 }
 
 li {
-  float: right;
+  /*float: right;*/
   list-style: none;
-  display: block;
+  display: inline;
   margin-top: 40px;
 }
 
