--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,12 +1,11 @@
 body {
   display: flex;
-  justify-content: center;
   margin: 0;
 }
 
-#content {
+/*#content {
   position: relative;
-}
+}*/
 
 .Sidebar {
   text-align: center;
@@ -24,10 +23,9 @@ body {
 }
 
 li {
-  /*float: right;*/
+  margin: auto;
   list-style: none;
-  display: inline;
-  margin-top: 40px;
+  display: inline-block;
 }
 
 img {
