--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,24 +1,30 @@
+* {
+    box-sizing: border-box;
+}
+
 body {
   display: flex;
   margin: 0;
 }
 
-/*#content {
-  position: relative;
-}*/
+#content {
+  width: auto;
+  display: block;
+}
 
 .Sidebar {
+  width: 100%;
   text-align: center;
   position: fixed;
   background-color: pink;
-  height: 100%;
-  width: 20%;
+  height: 20%;
+  /*width: 20%;*/
   flex-direction: column;
 }
 
 .img-list-container {
-  width: 80%;
-  float: right;
+  width: 100%;
+  /*float: right;*/
   text-align: center;
 }
 
@@ -30,5 +36,40 @@ li {
 
 img {
   height: auto;
-  max-width: 670px;
+  max-width: 100%;
+}
+
+@media (min-width: 1024px){
+
+  .col-1 {width: 20%;}
+  .col-2 {width: 40%;}
+  .col-3 {width: 60%;}
+  .col-4 {width: 80%;}
+  .col-5 {width: 100%;}
+
+  .Sidebar {
+    text-align: center;
+    position: fixed;
+    background-color: pink;
+    height: 100%;
+    width: 20%;
+    flex-direction: column;
+  }
+
+  .img-list-container {
+    width: 80%;
+    float: right;
+    text-align: center;
+  }
+
+  li {
+    margin: auto;
+    list-style: none;
+    display: inline-block;
+  }
+
+  img {
+    height: auto;
+    max-width: 670px;
+  }
 }
