--- a/public/css/main.css
+++ b/public/css/main.css
@@ -33,6 +33,14 @@ body {
   text-align: center;
 }
 
+.about {
+  text-align: center;
+}
+
+.contact {
+  text-align: center;
+}
+
 li {
   margin: auto;
   list-style: none;
