grid contact and about components

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -98,6 +98,14 @@ p {
     text-align: center;
   }
 
+  .about-content {
+    float: right;
+  }
+
+  .contact-content {
+    float: right;
+  }
+
   ul {
     padding: 0;
     display: block;
