--- a/public/css/main.css
+++ b/public/css/main.css
@@ -6,6 +6,8 @@ body {
   margin: 0;
 }
 
+
+
 .Sidebar {
   top: 0;
   margin: 0;
@@ -37,11 +39,17 @@ body {
 }
 
 .about-content {
-  /*text-align: center;*/
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
 }
 
 .contact-content {
-  /*text-align: center;*/
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
 }
 
 ul {
@@ -63,20 +71,21 @@ a {
   display: inline-block;
 }
 
+
 img {
   height: auto;
   max-width: 70%;
 }
 
-p {
+/*p {
   position: absolute;
   left: 50%;
   top: 50%;
   transform: translate(-50%, -50%);
   /*margin: 0;
   padding: 8px;
-  display: inline-block;*/
-}
+  display: inline-block;
+}*/
 
 @media (min-width: 1024px){
 
@@ -102,23 +111,15 @@ p {
   }
 
   .about-content {
-    /*margin-top: 0;
-    padding: 0.5%;
-    float: right;*/
+    left: 60%;
     text-align: center;
   }
 
   .contact-content {
-    position: relative;
-    margin-top: 0;
-    padding: 0.5%;
-    float: right;
+    left: 60%;
     text-align: center;
   }
 
-  .contact-content p {
-
-  }
 
   ul {
     padding: 0;
