--- a/public/css/main.css
+++ b/public/css/main.css
@@ -43,6 +43,7 @@ body {
   transform: translate(-50%, -50%);
   font-family: 'Work Sans', sans-serif;
   word-spacing: 5px;
+  line-height: 35px;
 }
 
 .contact-content {
@@ -72,10 +73,15 @@ a {
   display: inline-block;
 }
 
+a:hover {
+  cursor: pointer;
+}
+
 
 img {
   height: auto;
   max-width: 70%;
+  padding-bottom: 10%;
 }
 
 @media (min-width: 1024px){
